--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <div class="overlay"></div>
               </div>
               
-              <div class="carousel-caption d-none d-md-block">
+              <div class="carousel-caption  d-md-block">
                 <h5>رايتو</h5>
                 <p class="pt-5">للبرمجيات وتخطيط الموارد</p>
               </div>
@@ -93,7 +93,7 @@
                 <div class="overlay"></div>
               </div>
                
-              <div class="carousel-caption d-none d-md-block">
+              <div class="carousel-caption d- d-md-block">
                 <h5>نظام ERP متطور ومتكامل</h5>
                 <p class="pt-5">برنامج رايتو ERP هو الحل الأمثل الذي يلبي احتياجات إدارة أعمالك، تم تطويره باستخدام أحدث التقنيات المتقدمة لضمان السرعة والدقة والأمان، فريق دعم البرنامج يؤمن بمبدأ التطور المستمر كمفتاح للنجاح منذ بداية تأسيسه!
                </p>
@@ -264,7 +264,7 @@
      <div class="pt-5 pb-5">
       <section class="component-adver">
         <div class="container">
-           <div class="row mx-0 row-cols-lg-2 row-cols-md-2 justify-content-between align-items-center">
+           <div class="row mx-0 row-cols-lg-2 row-cols-md-2 row-cols-1 justify-content-between align-items-center">
               <div class="col defintion-abver">
                 <h6> مع رايتو عملك أسهل!
                </h6>
@@ -293,7 +293,7 @@
             </p>
           </div>
       </div>
-      <div class="content-erp row mx-0 row-cols-lg-5 row-cols-md-3 row-cols-2 g-4 pt-5">
+      <div class="content-erp row mx-0 row-cols-lg-5 row-cols-md-3 row-cols-1 g-4 pt-5">
         <div class="col d-flex">
           <div class="card">
              <img  src="./assets/img/vision-2.png"alt="vision">
@@ -362,7 +362,7 @@
       <div class="pt-5 pb-5">
         <section class="component-adver">
           <div class="container">
-             <div class="row mx-0 row-cols-lg-2 row-cols-md-2 justify-content-between align-items-center">
+             <div class="row mx-0 row-cols-lg-2 row-cols-md-2 row-cols-1 justify-content-between align-items-center">
                 <div class="col defintion-abver">
                   <h6> أحصل على نظام ERP بميزات متعددة
 
@@ -450,14 +450,14 @@
       <div class="component-custmer pt-5 pb-5">
         <div class="container">
           <div class="over"></div>
-          <div class="row mx-0 row-cols-md-2 row-cols-md-1 row-custemer">
+          <div class="row mx-0 row-cols-md-2 row-cols-1 row-custemer">
             <div class="col">
               <h2>انضم إلى قائمة عملائنا الكرام الآن</h2>
               <p class="pt-4">انضم إلى قائمة عملائنا الكرام الآن استفساراتكم هي اهتمامنا ، خدمتكم مميزة ، ورضاك هو سعينا الدؤوب </p>
             </div>
             <div class="col">
               <div class="row mx-0">
-                <div class="col-lg-6 col-md-4 col-sm-12">
+                <div class="col-lg-6 col-md-4 col-6">
                     <div class="counter-item animated-hover-icon text-center aos-init aos-animate" data-aos="fade-up" data-aos-delay="30">
                         <div class="text">
                             <h2 class="number"><span class="count">40</span>K</h2>
@@ -466,7 +466,7 @@
                     </div>
                 </div>
   
-                <div class="col-lg-6 col-md-4 col-sm-12">
+                <div class="col-lg-6 col-md-4 col-6">
                     <div class="counter-item animated-hover-icon text-center aos-init aos-animate" data-aos="fade-up" data-aos-delay="40">
   
                         <div class="text">
@@ -476,7 +476,7 @@
                     </div>
                 </div>
   
-                <div class="col-lg-6 col-md-4 col-sm-12">
+                <div class="col-lg-6 col-md-4 col-6">
                     <div class="counter-item text-center animated-hover-icon aos-init aos-animate" data-aos="fade-up" data-aos-delay="50">
                         <div class="text">
                             <h2 class="number"><span class="count">245</span></h2>
@@ -484,7 +484,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6 col-md-4 col-sm-12">
+                <div class="col-lg-6 col-md-4 col-6">
                     <div class="counter-item text-center animated-hover-icon aos-init aos-animate" data-aos="fade-up" data-aos-delay="50">
   
                         <div class="text">
