--- a/index.html
+++ b/index.html
@@ -161,7 +161,10 @@
                     <h3 class="card-title">المحاسبة العامة </h3>
                     <p class="card-text">نقدم لكم برامج المحاسبة لكافة المنشأت، ويتم من خلال هذه البرامج إدارة المدفوعات - القيـود اليوميـة - الايداعات - التحويلات البنكية بيـن الحسابات- تسوية الحسابات البنكية الشــركات وغيرها.
                     </p>
-                    <a href="#" class="btn btn-primar px-3">قراءة المزيد </a>
+                    <div>
+                      <a href="#" class="btn btn-primar px-3">قراءة المزيد </a>
+
+                    </div>
                   </div>
                </div>
             </div>
@@ -175,7 +178,10 @@
                     يمكـن مـن خلال نظـام رايتو ERP السـحابي  إدارة كل مـن عمليـات أقسـام المخـزون و التصنيع و المشتريات والمبيعات ويتميز هذا النظام بأنه مترابط مـع تطبيـق الجـوال الخاص بمندوبي المبيعات (نقاط البيع المتحركة)
 
                    </p>
-                   <a href="#" class="btn btn-primar px-3">قراءة المزيد </a>
+                   <div>
+                    <a href="#" class="btn btn-primar px-3">قراءة المزيد </a>
+
+                  </div>
                  </div>
               </div>
            </div>
@@ -188,7 +194,10 @@
                  <p class="card-text">  
                   نؤسس لك برنامج يساعدك على على إدارة وتتبع مبيعاتك عبر المندوبين في منشأتك بكل سهولة وذلك من خلال توفير ميزة تسجيل فواتير المبيعات والمردودات مع تطبيق كل سياسات المنشأة الخاصة بالعملاء والأسعار عند إصدار الفاتورة.
                  </p>
-                 <a href="#" class="btn btn-primar px-3">قراءة المزيد </a>
+                 <div>
+                  <a href="#" class="btn btn-primar px-3">قراءة المزيد </a>
+
+                </div>
                </div>
             </div>
            </div>
@@ -201,7 +210,10 @@
                  <p class="card-text">  
                   نؤسس لك برنامج يساعدك على حساب تكلفة تصنيع المنتج و حساب الأرباح و نسب التحمل للمصاريف ادخال البيانات الاساسية للمواد الخام من أسماء - أكواد - أسعار شراء - صلاحية ألخ
                 </p>
-                 <a href="#" class="btn btn-primar px-3">قراءة المزيد </a>
+                <div>
+                  <a href="#" class="btn btn-primar px-3">قراءة المزيد </a>
+
+                </div>
                </div>
             </div>
            </div>
@@ -213,7 +225,10 @@
                  <h3 class="card-title">      إدارة الأصول الثابتة </h3>
                  <p class="card-text">  
                   نؤسس لك برنامج يمكنك من حصر وتحليل كافة الأصول الثابتة، كما يتميز بأنه متوافق مع جميع طرق الإهلاك المتعارف عليها يشمل إضافة - إهلاك - تجديد وإحلال - بيع واستبعاد الأصول الثابتة.                </p>
-                 <a href="#" class="btn btn-primar px-3">قراءة المزيد </a>
+                  <div>
+                    <a href="#" class="btn btn-primar px-3">قراءة المزيد </a>
+
+                  </div>
                </div>
             </div>
            </div>
@@ -226,7 +241,10 @@
                  <p class="card-text">  
                   ننشئ لك برنامج يساعد في إدارة جميع بيانات الموظفين بكفاءة في ملف تعريف واحد، بالإضافة إلى تنظيم دورة العهدة من البداية إلى النهاية، ويساعدك البرنامج في إعداد استراتيجية المكافآت والعقوبات، ومتابعة تدفقات عمل الموارد البشرية.
                   </p>
-                  <a href="#" class="btn btn-primar px-3">قراءة المزيد </a>
+                  <div>
+                    <a href="#" class="btn btn-primar px-3">قراءة المزيد </a>
+
+                  </div>
                </div>
             </div>
            </div>
@@ -239,7 +257,10 @@
                  <p class="card-text">  
                   نؤسس برامج يتم خلالها إدارة و تحليل و متابعة عمليات البيع وتفاصيلها الدقيقة كما يتم من خلالها استعراض نتائج وتقارير البيع واستعراض الإحصائيات والمقارنات بين كافة عمليات الشراء التي تتم في منشأتك.
                 </p>
+                <div>
                   <a href="#" class="btn btn-primar px-3">قراءة المزيد </a>
+
+                </div>
                </div>
             </div>
            </div>
@@ -253,7 +274,10 @@
                   نؤسس لك نظام يساعدك في إدارة محطات الوقود من خلاله تستطيع ادارة كافة الفروع التابعة لك من مكان واحد، كما يمكنك من خلاله متابعة حركة المخازن من توريدات وصرف خامات سواء لمنافذ البيع أو تحويلات للمخازن الأخرى.
 
                 </p>
+                <div>
                   <a href="#" class="btn btn-primar px-3">قراءة المزيد </a>
+
+                </div>
                </div>
             </div>
            </div>
@@ -298,7 +322,7 @@
       <div class="content-erp row mx-0 row-cols-lg-5 row-cols-md-3 row-cols-1 g-4 pt-5">
         <div class="col d-flex">
           <div class="card"data-aos-delay="30"data-aos="fade-up">
-             <img  src="./assets/img/vision-2.png"alt="vision">
+             <img  src="./assets/img/pieces.png"alt="pieces">
              <div class="card-body p-1 text-center">
                <h3 class="card-title">  بيع بالتجزئة         </h3>
                <p class="card-text">  
@@ -310,7 +334,7 @@
          </div>
          <div class="col d-flex">
           <div class="card"data-aos-delay="30"data-aos="fade-up">
-             <img  src="./assets/img/vision-2.png"alt="vision">
+             <img  src="./assets/img/service.png"alt="vision">
              <div class="card-body p-1 text-center">
                <h3 class="card-title">   الخدمات المهنية         </h3>
                <p class="card-text">  
@@ -323,7 +347,7 @@
          </div>
          <div class="col d-flex">
           <div class="card"data-aos-delay="30"data-aos="fade-up">
-             <img  src="./assets/img/vision-2.png"alt="vision">
+             <img  src="./assets/img/accounting.png"alt="accounting">
              <div class="card-body p-1 text-center">
                <h3 class="card-title">    خدمات الأعمال         </h3>
                <p class="card-text">  
@@ -335,7 +359,7 @@
          </div>
          <div class="col d-flex">
           <div class="card"data-aos-delay="30"data-aos="fade-up">
-             <img  src="./assets/img/vision-2.png"alt="vision">
+             <img  src="./assets/img/learning.png"alt="vision">
              <div class="card-body p-1 text-center">
                <h3 class="card-title">    التعليم          </h3>
                <p class="card-text">  
@@ -347,7 +371,7 @@
          </div>
          <div class="col d-flex">
           <div class="card"data-aos-delay="30"data-aos="fade-up">
-             <img  src="./assets/img/vision-2.png"alt="vision">
+             <img  src="./assets/img/property.png"alt="vision">
              <div class="card-body p-1 text-center">
                <h3 class="card-title">    العقارات          </h3>
                <p class="card-text">  
