--- a/contact.html
+++ b/contact.html
@@ -70,6 +70,85 @@
       </div>
     </nav>
      <!--end-nav-->
+     <!---->
+     <section class="component-hadeer">
+        <div class="container">
+            <h2 class="page-title">تواصل معنا</h2>
+        </div>
+     </section>
+     <section class="content-content mt-5 pb-5">
+        <div class="container">
+          <div class="row mx-0 justify-content-center">
+            <div class="col-md-8 text-center">
+               <h6 class="title-title">   جاهزون لدعم عملك على مدار 24 ساعة </h6>
+               <p class="pt-3 p-decerption">
+                نمتلك قسم كامل من خدمة العملاء يساعدك طوال اليوم، إذا أردت أن تطرح سؤالًا بخصوص الحلول البرمجية أو الأنظمة المحاسبية، لا تتردد في التواصل معنا.               </p>
+            </div>
+         </div>
+           <div class="component-map pt-5">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d927758.0369178087!2d47.48205020980423!3d24.724997765706153!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1z2KfZhNix2YrYp9i2INiMINin2YTZhdmF2YTZg9ipINin2YTYudix2KjZitipINin2YTYs9i52YjYr9mK2Kkg2IwgNDAwMCDYt9ix2YrZgiDYr9in2KbYsdmKIDEyOTkzINiMIDI3!5e0!3m2!1sar!2seg!4v1700250417346!5m2!1sar!2seg"  height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+           </div>
+           <div class="row mx-0 row-cols-lg-2 row-cols-1 pt-5">
+              <div class="col">
+                <h6  class="title-title">معلومات  الاتصال</h6>
+                <div class="component-contents pt-5">
+                  <div class="contact-content mb-3">
+                    <a class="content-box">
+                        <i class="fa fa-location-dot"></i>
+                        الرياض ، المملكة العربية السعودية ، 4000
+                        طريق دائري 12993 ، 27              
+                    </a>
+                  </div>
+                  <div class="contact-content mb-3">
+                    <a href="tel:++966538499438" class="content-box">
+                        <i class="fa fa-phone"></i>
+                        <span>+966538499438</span>
+                    </a>
+                  </div>
+                  <div class="contact-content mb-3">
+                    <a href="mailto:info@raitotec.com" class="content-box">
+                        <i class="fas fa-envelope"></i>
+                        info@raitotec.com
+                    </a>
+                  </div>
+                </div>
+               
+              </div>
+              <div class="col">
+                <form class="form-content">
+                  <div class="mb-3">
+                    <label for="exampleInput" class="form-label">الأسم بالكامل<span>*</span></label>
+                    <input type="text" class="form-control" id="exampleInput">
+                  </div>
+                  <div class="mb-3">
+                    <label for="exampleInputEmail1" class="form-label">البريد الالكتروني <span>*</span></label>
+                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                  </div>
+                  <div class="mb-3">
+                    <label for="exampleInput" class="form-label"> نوع المشروع <span>*</span></label>
+
+                    <select class="form-select" aria-label="Default select example">
+                      <option selected>Open this select menu</option>
+                      <option value="1">One</option>
+                      <option value="2">Two</option>
+                      <option value="3">Three</option>
+                    </select>
+                  </div>
+                  <div class="mb-3">
+                    <label for="exampleInput" class="form-label"> الجوال<span>*</span></label>
+                    <input type="phone" class="form-control" id="exampleInput">
+                  </div>
+                  <div class="mb-3">
+                    <label for="exampleInput" class="form-label"> وصف المشروع<span>*</span></label>
+                    <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" rows="6"></textarea>
+
+                  </div>
+                  <button type="submit" class="btn btn-primar  px-5 pt-3 pb-3">سجل الان</button>
+                </form>
+              </div>
+           </div>
+        </div>
+     </section>
      <section class="content-project mt-5">
       <div class="container">
          <div class="row mx-0 row-cols-lg-2 row-cols-md-2 row-cols-1 justify-content-between align-items-center">
@@ -92,7 +171,7 @@
           <img class="shape-left" src="./assets/img/shap.webp" alt="shape">
       </div>
       </div>
-   </section>
+    </section>
      <footer class="component-footer  pt-55">
       <div class="container">
         <div class="row mx-0 pb-55 row-footer">
@@ -159,7 +238,7 @@
                         <i class="fas fa-envelope"></i>
                         info@raitotec.com
                     </a>
-                </div>
+                  </div>
                 </div>
               </div>
              
