--- a/index.html
+++ b/index.html
@@ -745,7 +745,7 @@
                 
                 </p>
                 </div>
-                <div class="col text-start">
+                <div class="col text-start col-button-con">
                  <a href="#" class="p-2 px-4 button-wiet">  تواصل معنا</a>
                 </div>
              </div>
