--- a/Services.html
+++ b/Services.html
@@ -70,6 +70,11 @@
       </div>
     </nav>
      <!--end-nav-->
+     <section class="component-hadeer">
+      <div class="container">
+          <h2 class="page-title">  الخدمات</h2>
+      </div>
+     </section>
      <section class="content-project mt-5">
       <div class="container">
          <div class="row mx-0 row-cols-lg-2 row-cols-md-2 row-cols-1 justify-content-between align-items-center">
@@ -84,7 +89,7 @@
             
             </p>
             </div>
-            <div class="col text-start">
+            <div class="col text-start col-button-con">
              <a href="#" class="p-2 px-4 button-wiet">  تواصل معنا</a>
             </div>
          </div>
