--- a/Our-business.html
+++ b/Our-business.html
@@ -94,7 +94,7 @@
      <!--end-nav-->
      <section class="component-hadeer">
       <div class="container">
-          <h2 class="page-title">  الخدمات</h2>
+          <h2 class="page-title">  اعمالنا</h2>
       </div>
      </section>
      <section class="content-project mt-5">
