--- a/index.html
+++ b/index.html
@@ -46,11 +46,33 @@
                 <li class="nav-item">
                   <a class="nav-link" href="about.html">من نحن</a>
                 </li>
+                
+               <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  الخدمات
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="Services.html">تاهيل المحطات</a></li>
+                  <li><a class="dropdown-item" href="Services.html">تصميم المواقع الاكترونية </a></li>
+                  <li><a class="dropdown-item" href="Services.html">تصميم تطبيقات الجوال  </a></li>
+                </ul>
+                </li>
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    البرامج
+                  </a>
+                  <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="Programs.html"> برنامج المحاسبة</a></li>
+                    <li><a class="dropdown-item" href="Programs.html">  برنامج ادارة المخازن </a></li>
+                    <li><a class="dropdown-item" href="Programs.html">  برنامج ادارة المناديب  </a></li>
+                    <li><a class="dropdown-item" href="Programs.html">  برنامج ادارة الموارد البشرية  </a></li>
+                    <li><a class="dropdown-item" href="Programs.html">  برنامج   نقاط البيعpos  </a></li>
+                    <li><a class="dropdown-item" href="Programs.html">     برامج اخرى  </a></li>
+
+                  </ul>
+                </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="Services.html">الخدمات</a>
-               </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="prices.html">الاسعار</a>
+                    <a class="nav-link" href="Our-business.html">نماذج اعمالنا</a>
                </li>
                <li class="nav-item">
                     <a class="nav-link" href="Blog.html">المدونة</a>
@@ -59,7 +81,7 @@
                   <a class="nav-link" href="contact.html">تواصل معنا</a>
                 </li>
                 <li class="nav-item nav-login-lang">
-                    <a class="nav-link" href="#">  تسجيل الدخول</a>
+                    <a class="nav-link" href="login.html">  تسجيل الدخول</a>
                </li>
                <li class="nav-item nav-login-lang">
                     <a class="nav-link" href="#"> en</a>
@@ -147,7 +169,7 @@
         <div class="container">
           <div class="row mx-0 justify-content-center">
              <div class="col-md-8 text-center">
-                <h2 class="title-title"> خدمات انظمة رايتو ERP</h2>
+                <h2 class="title-title"> برامج انظمة رايتو ERP</h2>
                 <p class="pt-3 p-decerption">
                   تقدم أنظمة رايتو حلولًا شاملة تستهدف تحسين أداء الشركات من خلال تقديم أنظمة ERP وتطبيقات إدارة المناديب والفواتير الإلكترونية، بالإضافة إلى خدمات تحسين وتطوير المحطات وفقًا لاحتياجات العملاء.
                 </p>
