--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
       </div>
       <!---------------------------end-loading-pag------------------------->
      <!--nav-->
-     <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top navber-index ">
+     <nav class="navbar navbar-expand-xl bg-body-tertiary fixed-top navber-index ">
       <div class="container">
         <a class="navbar-brand" href="index.html">
            <img src="./assets/img/logoar.webp" alt="logo">
@@ -127,14 +127,14 @@
           <div class="container">
              <div class="row mx-0 row-cols-lg-2 row-cols-1 g-4">
                   <div class="col">
-                    <img class="img-vision" src="./assets/img/vision.png" alt="vision">
+                    <img class="img-vision" src="./assets/img/mission.webp" alt="vision">
                     <h4 class="title-title pt-2">رؤيتنا</h4>
                     <p class="p-decerption pt-4">التطوير التقني ليس حكراً أن يستفيد منه كل فرد، و قد عقدنا العزم أن يصل لأحدث التطورات التقنية و ينجح معها كل من أراد النجاح و الرقي لنفسه و لوطننا الحبيب.
                     </p>
                   </div>
                   <div class="col">
 
-                    <img class="img-vision"src="./assets/img/mission.png" alt="mission">
+                    <img class="img-vision"src="./assets/img/vision.webp" alt="mission">
                     <h4 class="title-title pt-2">رسالتنا</h4>
                     <p class="p-decerption pt-4"> 
 
@@ -160,7 +160,7 @@
          <div class="row mx-0 row-cols-lg-3 row-cols-md-2 row-cols-1 g-3 pt-5">
             <div class="col d-flex">
                 <div class="about-item">
-                  <img src="./assets/img/project-management.png" alt="project-management">
+                  <img src="./assets/img/project-management.webp" alt="project-management">
                   <div class="px-3">
                     <h6 class="title-title ">أحدث التقنيات الخدمية السحابية</h6>
                     <p class="p-decerption pt-1">نستخدم أحدث التقنيات السحابية لتطوير وتقديم حلولنا، كما نتبع أفضل الممارسات ونواكب التغيرات السريعة في السوق المحلية والعالمية لضمان تقديم تقنيات متقدمة وموثوقة.</p>
@@ -171,7 +171,7 @@
             <!---->
             <div class="col d-flex">
               <div class="about-item">
-                <img src="./assets/img/service-v.png" alt="service-v">
+                <img src="./assets/img/link-other.webp" alt="service-v">
                 <div class="px-3">
                   <h6 class="title-title ">  تكامل وربط الأنظمة المتنوعة</h6>
                   <p class="p-decerption pt-1">لدينا القدرة على ربط أنظمتنا مع المنصات المختلفة، سواء كانت حكومية أو خاصة، وهذا يسمح للعملاء بالاستفادة من تكامل سلس كما يسهل تبادل المعلومات بين الأنظمة.
@@ -184,7 +184,7 @@
             <!---->
             <div class="col d-flex">
               <div class="about-item">
-                <img src="./assets/img/development.png" alt="development">
+                <img src="./assets/img/programming.webp" alt="development">
                 <div class="px-3">
                   <h6 class="title-title ">      خدمات برمجية متنوعة</h6>
                   <p class="p-decerption pt-1"> 
@@ -199,7 +199,7 @@
             <!---->
             <div class="col d-flex">
               <div class="about-item">
-                <img src="./assets/img/cyber-security.png" alt="cyber-security">
+                <img src="./assets/img/cyber-security.webp" alt="cyber-security">
                 <div class="px-3">
                   <h6 class="title-title ">      
                       أمان وسيبرانية
@@ -214,7 +214,7 @@
             <!---->
             <div class="col d-flex">
               <div class="about-item">
-                <img src="./assets/img/page-quality.png" alt="page-quality">
+                <img src="./assets/img/page-quality.webp" alt="page-quality">
                 <div class="px-3">
                   <h6 class="title-title ">      
                     الالتزام بمعايير جودة الخدمة 
@@ -230,7 +230,7 @@
             <!---->
             <div class="col d-flex">
               <div class="about-item">
-                <img src="./assets/img/member.png" alt="member">
+                <img src="./assets/img/member.webp" alt="member">
                 <div class="px-3">
                   <h6 class="title-title ">      
                     فريق عمل ماهر
