--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </div>
       <!---------------------------end-loading-pag------------------------->
      <!--nav-->
-       <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top navber-index ">
+        <nav class="navbar navbar-expand-xl bg-body-tertiary fixed-top navber-index">
           <div class="container">
             <a class="navbar-brand" href="index.html">
                <img src="./assets/img/logoar.webp" alt="logo">
@@ -178,7 +178,7 @@
           <div class="content-services row mx-0 row-cols-lg-3 row-cols-md-2 row-cols-1 g-4 pt-5">
             <div class="col d-flex">
                <div class="card"data-aos-delay="30"data-aos="fade-up">
-                  <img class="img-fluid" src="./assets/img/General-accounting.jpg"alt="Services">
+                  <img class="img-fluid" src="./assets/img/management system.webp"alt="Services">
                   <div class="card-body">
                     <h3 class="card-title">المحاسبة العامة </h3>
                     <p class="card-text">نقدم لكم برامج المحاسبة لكافة المنشأت، ويتم من خلال هذه البرامج إدارة المدفوعات - القيـود اليوميـة - الايداعات - التحويلات البنكية بيـن الحسابات- تسوية الحسابات البنكية الشــركات وغيرها.
@@ -193,7 +193,7 @@
             <!---->
             <div class="col d-flex">
               <div class="card"data-aos-delay="30"data-aos="fade-up">
-                 <img class="img-fluid" src="./assets/img/Inventory-Management.jpg"alt="Services">
+                 <img class="img-fluid" src="./assets/img/Stores.webp"alt="Services">
                  <div class="card-body">
                    <h3 class="card-title"> إدارة المخزون </h3>
                    <p class="card-text">  
@@ -210,7 +210,7 @@
            <!---->
            <div class="col d-flex">
             <div class="card"data-aos-delay="30"data-aos="fade-up">
-               <img class="img-fluid" src="./assets/img/Inventory-Management.jpg"alt="Services">
+               <img class="img-fluid" src="./assets/img/delegates.webp"alt="Services">
                <div class="card-body">
                  <h3 class="card-title">  إعداد تطبيق المناديب </h3>
                  <p class="card-text">  
@@ -226,7 +226,7 @@
            <!---->
            <div class="col d-flex">
             <div class="card"data-aos-delay="30"data-aos="fade-up">
-               <img class="img-fluid" src="./assets/img/Inventory-Management.jpg"alt="Services">
+               <img class="img-fluid" src="./assets/img/Manufacturing.webp"alt="Services">
                <div class="card-body">
                  <h3 class="card-title">    إدارة التصنيع والإنتاج </h3>
                  <p class="card-text">  
@@ -242,7 +242,7 @@
            <!---->
            <div class="col d-flex">
             <div class="card"data-aos-delay="30"data-aos="fade-up">
-               <img class="img-fluid" src="./assets/img/Inventory-Management.jpg"alt="Services">
+               <img class="img-fluid" src="./assets/img/assets.webp"alt="Services">
                <div class="card-body">
                  <h3 class="card-title">      إدارة الأصول الثابتة </h3>
                  <p class="card-text">  
@@ -257,7 +257,7 @@
            <!---->
            <div class="col d-flex">
             <div class="card"data-aos-delay="30"data-aos="fade-up">
-               <img class="img-fluid" src="./assets/img/hr.png"alt="Services">
+               <img class="img-fluid" src="./assets/img/HR.webp"alt="Services">
                <div class="card-body">
                  <h3 class="card-title">        إدارة الموارد البشرية </h3>
                  <p class="card-text">  
@@ -273,7 +273,7 @@
            <!---->
            <div class="col d-flex">
             <div class="card"data-aos-delay="30"data-aos="fade-up">
-               <img class="img-fluid" src="./assets/img/Inventory-Management.jpg"alt="Services">
+               <img class="img-fluid" src="./assets/img/Sale-purchases.webp"alt="Services">
                <div class="card-body">
                  <h3 class="card-title">       متابعة المبيعات والمشتريات</h3>
                  <p class="card-text">  
@@ -289,7 +289,7 @@
            <!---->
            <div class="col d-flex">
             <div class="card"data-aos-delay="30"data-aos="fade-up">
-               <img class="img-fluid" src="./assets/img/Inventory-Management.jpg"alt="Services">
+               <img class="img-fluid" src="./assets/img/stations.webp"alt="Services">
                <div class="card-body">
                  <h3 class="card-title">         إدارة محطات الوقود</h3>
                  <p class="card-text">  
@@ -344,7 +344,7 @@
       <div class="content-erp row mx-0 row-cols-lg-5 row-cols-md-3 row-cols-1 g-4 pt-5">
         <div class="col d-flex">
           <div class="card"data-aos-delay="30"data-aos="fade-up">
-             <img  src="./assets/img/pieces.png"alt="pieces">
+             <img  src="./assets/img/pieces.webp"alt="pieces">
              <div class="card-body p-1 text-center">
                <h3 class="card-title">  بيع بالتجزئة         </h3>
                <p class="card-text">  
@@ -356,7 +356,7 @@
          </div>
          <div class="col d-flex">
           <div class="card"data-aos-delay="30"data-aos="fade-up">
-             <img  src="./assets/img/service.png"alt="vision">
+             <img  src="./assets/img/service.webp"alt="vision">
              <div class="card-body p-1 text-center">
                <h3 class="card-title">   الخدمات المهنية         </h3>
                <p class="card-text">  
@@ -369,7 +369,7 @@
          </div>
          <div class="col d-flex">
           <div class="card"data-aos-delay="30"data-aos="fade-up">
-             <img  src="./assets/img/accounting.png"alt="accounting">
+             <img  src="./assets/img/accounting.webp"alt="accounting">
              <div class="card-body p-1 text-center">
                <h3 class="card-title">    خدمات الأعمال         </h3>
                <p class="card-text">  
@@ -381,7 +381,7 @@
          </div>
          <div class="col d-flex">
           <div class="card"data-aos-delay="30"data-aos="fade-up">
-             <img  src="./assets/img/learning.png"alt="vision">
+             <img  src="./assets/img/learning.webp"alt="vision">
              <div class="card-body p-1 text-center">
                <h3 class="card-title">    التعليم          </h3>
                <p class="card-text">  
@@ -393,7 +393,7 @@
          </div>
          <div class="col d-flex">
           <div class="card"data-aos-delay="30"data-aos="fade-up">
-             <img  src="./assets/img/property.png"alt="vision">
+             <img  src="./assets/img/estate.webp"alt="vision">
              <div class="card-body p-1 text-center">
                <h3 class="card-title">    العقارات          </h3>
                <p class="card-text">  
@@ -433,14 +433,14 @@
         <div class="container">
           <div class="row mx-0 justify-content-center">
              <div class="col-md-8 text-center">
-                <h2 class="title-title">   خدمات أخرى </h2>
+                <h2 class="title-title">   خدمات  </h2>
                 
              </div>
           </div>
           <div class="services-other content-services row mx-0 row-cols-lg-4 row-cols-md-2 row-cols-1 g-4 pt-5">
             <div class="col d-flex">
                <div class="card"data-aos-delay="30"data-aos="fade-up">
-                  <img class="img-fluid" src="./assets/img/General-accounting.jpg"alt="Services">
+                  <img class="img-fluid" src="./assets/img/video-design.webp"alt="Services">
                   <div class="card-body">
                     <h3 class="card-title">تصميم الفيديوهات  </h3>
                     <p class="card-text">
@@ -453,7 +453,7 @@
             <!---->
             <div class="col d-flex">
               <div class="card"data-aos-delay="30"data-aos="fade-up">
-                 <img class="img-fluid" src="./assets/img/Inventory-Management.jpg"alt="Services">
+                 <img class="img-fluid" src="./assets/img/web-design.webp"alt="Services">
                  <div class="card-body">
                    <h3 class="card-title">  تصميم المواقع </h3>
                    <p class="card-text">  
@@ -466,7 +466,7 @@
            <!---->
            <div class="col d-flex">
             <div class="card"data-aos-delay="30"data-aos="fade-up">
-               <img class="img-fluid" src="./assets/img/Inventory-Management.jpg"alt="Services">
+               <img class="img-fluid" src="./assets/img/serves-other.webp"alt="Services">
                <div class="card-body">
                  <h3 class="card-title">    خدمات ما بعد البيع  </h3>
                  <p class="card-text">  
@@ -479,7 +479,7 @@
            <!---->
            <div class="col d-flex">
             <div class="card"data-aos-delay="30"data-aos="fade-up">
-               <img class="img-fluid" src="./assets/img/Inventory-Management.jpg"alt="Services">
+               <img class="img-fluid" src="./assets/img/wep-mopile.webp"alt="Services">
                <div class="card-body">
                  <h3 class="card-title">      تطبيقات الجوال </h3>
                  <p class="card-text">  
@@ -611,7 +611,7 @@
   
       </div>
       <div class="slider-reviews pt-5">
-        <div id="carouselExampleIndicators" class="carousel slide custemer-reviews">
+        <div id="carouselExampleIndicators" class="carousel slide custemer-reviews" data-bs-ride="carousel">
          
           <div class="carousel-inner">
             <div class="carousel-item active">
