--- a/prices.html
+++ b/prices.html
@@ -30,7 +30,7 @@
       </div>
       <!---------------------------end-loading-pag------------------------->
      <!--nav-->
-     <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top navber-index ">
+     <nav class="navbar navbar-expand-xl bg-body-tertiary fixed-top navber-index ">
       <div class="container">
         <a class="navbar-brand" href="index.html">
            <img src="./assets/img/logoar.webp" alt="logo">
