--- a/about.html
+++ b/about.html
@@ -112,7 +112,7 @@
                   <div class="div-button">
                       <div id="myBtn"></div>
                   </div>
-                  <video  loop="" id="myVideo" poster="assets/img/slider.png" style="object-fit:cover;">
+                  <video  loop="" id="myVideo" poster="assets/img/advertisements.png" style="object-fit:cover;">
                       <source src="./assets/img/video/vv.mp4" type="video/mp4">
                   </video>
               
