--- a/index.html
+++ b/index.html
@@ -508,7 +508,7 @@
                 <div class="col-lg-6 col-md-4 col-6">
                     <div class="counter-item animated-hover-icon text-center aos-init aos-animate" data-aos="fade-up" data-aos-delay="30">
                         <div class="text">
-                            <h2 class="number"><span class="count">40</span>K</h2>
+                            <h2 class="number"><span class="count" data-count="40">0</span>K</h2>
                             <p>مستخدم</p>
                         </div>
                     </div>
@@ -518,7 +518,7 @@
                     <div class="counter-item animated-hover-icon text-center aos-init aos-animate" data-aos="fade-up" data-aos-delay="40">
   
                         <div class="text">
-                            <h2 class="number"><span class="count">50</span>K</h2>
+                            <h2 class="number"><span class="count" data-count="50">0</span>K</h2>
                             <p>عميل</p>
                         </div>
                     </div>
@@ -527,7 +527,7 @@
                 <div class="col-lg-6 col-md-4 col-6">
                     <div class="counter-item text-center animated-hover-icon aos-init aos-animate" data-aos="fade-up" data-aos-delay="50">
                         <div class="text">
-                            <h2 class="number"><span class="count">245</span></h2>
+                            <h2 class="number"><span class="count"data-count="245">0</span></h2>
                             <p>نظام</p>
                         </div>
                     </div>
@@ -536,7 +536,7 @@
                     <div class="counter-item text-center animated-hover-icon aos-init aos-animate" data-aos="fade-up" data-aos-delay="50">
   
                         <div class="text">
-                            <h2 class="number"><span class="count">550</span></h2>
+                            <h2 class="number"><span class="count"data-count="550">0</span></h2>
                             <p>منتج</p>
                         </div>
                     </div>
