--- a/about.html
+++ b/about.html
@@ -47,30 +47,30 @@
               <a class="nav-link" href="about.html">من نحن</a>
             </li>
             
-           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              الخدمات
-            </a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="Services.html">تاهيل المحطات</a></li>
-              <li><a class="dropdown-item" href="Services.html">تصميم المواقع الاكترونية </a></li>
-              <li><a class="dropdown-item" href="Services.html">تصميم تطبيقات الجوال  </a></li>
-            </ul>
-            </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                البرامج
+              <a class="nav-link dropdown-toggle" href="Services.html">
+                الخدمات
               </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="Programs.html"> برنامج المحاسبة</a></li>
-                <li><a class="dropdown-item" href="Programs.html">  برنامج ادارة المخازن </a></li>
-                <li><a class="dropdown-item" href="Programs.html">  برنامج ادارة المناديب  </a></li>
-                <li><a class="dropdown-item" href="Programs.html">  برنامج ادارة الموارد البشرية  </a></li>
-                <li><a class="dropdown-item" href="Programs.html">  برنامج   نقاط البيعpos  </a></li>
-                <li><a class="dropdown-item" href="Programs.html">     برامج اخرى  </a></li>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="#">تاهيل المحطات</a></li>
+                  <li><a class="dropdown-item" href="#">تصميم المواقع الاكترونية </a></li>
+                  <li><a class="dropdown-item" href="#">تصميم تطبيقات الجوال  </a></li>
+                </ul>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="Programs.html" role="button">
+                  البرامج
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="Programs.html"> برنامج المحاسبة</a></li>
+                  <li><a class="dropdown-item" href="Programs.html">  برنامج ادارة المخازن </a></li>
+                  <li><a class="dropdown-item" href="Programs.html">  برنامج ادارة المناديب  </a></li>
+                  <li><a class="dropdown-item" href="Programs.html">  برنامج ادارة الموارد البشرية  </a></li>
+                  <li><a class="dropdown-item" href="Programs.html">  برنامج   نقاط البيعpos  </a></li>
+                  <li><a class="dropdown-item" href="Programs.html">     برامج اخرى  </a></li>
 
-              </ul>
-            </li>
+                </ul>
+              </li>
             <li class="nav-item">
                 <a class="nav-link" href="Our-business.html">نماذج اعمالنا</a>
            </li>
