--- a/Programs.html
+++ b/Programs.html
@@ -233,7 +233,7 @@
             </div>
           </div>
           <div class="col">
-            <img class="sales-img img-one animate-float-y" src="./assets/img/seles.png" alt="sales">
+            <img class="sales-img img-one animate-float-y" src="./assets/img/management system.webp" alt="sales">
           </div>
          </div>
       </div>
@@ -287,7 +287,7 @@
             </div>
           </div>
           <div class="col">
-            <img class="sales-img img-one animate-float-y" src="./assets/img/seles.png" alt="sales">
+            <img class="sales-img img-one animate-float-y" src="./assets/img/Stores.webp" alt="sales">
           </div>
          </div>
       </div>
@@ -346,7 +346,7 @@
             </div>
           </div>
           <div class="col">
-            <img class="sales-img img-one animate-float-y" src="./assets/img/seles.png" alt="sales">
+            <img class="sales-img img-one animate-float-y" src="./assets/img/delegates.webp" alt="sales">
           </div>
          </div>
       </div>
@@ -408,7 +408,7 @@
             </div>
           </div>
           <div class="col">
-            <img class="sales-img img-one animate-float-y" src="./assets/img/seles.png" alt="sales">
+            <img class="sales-img img-one animate-float-y" src="./assets/img/HR.webp" alt="sales">
           </div>
          </div>
       </div>
@@ -476,7 +476,7 @@
             </div>
           </div>
           <div class="col">
-            <img class="sales-img img-one animate-float-y" src="./assets/img/seles.png" alt="sales">
+            <img class="sales-img img-one animate-float-y" src="./assets/img/Sale-purchases.webp" alt="sales">
           </div>
          </div>
       </div>
