--- a/Services.html
+++ b/Services.html
@@ -63,12 +63,12 @@
                   البرامج
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="Programs.html"> برنامج المحاسبة</a></li>
-                  <li><a class="dropdown-item" href="Programs.html">  برنامج ادارة المخازن </a></li>
-                  <li><a class="dropdown-item" href="Programs.html">  برنامج ادارة المناديب  </a></li>
-                  <li><a class="dropdown-item" href="Programs.html">  برنامج ادارة الموارد البشرية  </a></li>
-                  <li><a class="dropdown-item" href="Programs.html">  برنامج   نقاط البيعpos  </a></li>
-                  <li><a class="dropdown-item" href="Programs.html">     برامج اخرى  </a></li>
+                  <li><a class="dropdown-item" href="#"> برنامج المحاسبة</a></li>
+                  <li><a class="dropdown-item" href="#">  برنامج ادارة المخازن </a></li>
+                  <li><a class="dropdown-item" href="#">  برنامج ادارة المناديب  </a></li>
+                  <li><a class="dropdown-item" href="#">  برنامج ادارة الموارد البشرية  </a></li>
+                  <li><a class="dropdown-item" href="#">  برنامج   نقاط البيعpos  </a></li>
+                  <li><a class="dropdown-item" href="#">     برامج اخرى  </a></li>
 
                 </ul>
               </li>
@@ -137,7 +137,7 @@
           <!---->
           <div class="col d-flex">
             <div class="card aos-init aos-animate" data-aos-delay="30" data-aos="fade-up">
-               <img class="img-fluid" src="./assets/img/web-design.webp" alt="Services">
+               <img class="img-fluid" src="./assets/img/web-design.png" alt="Services">
                <div class="card-body">
                  <h3 class="card-title"> تصميم المواقع الإلكترونية </h3>
                  <p class="card-text">  
@@ -154,7 +154,7 @@
          
          <div class="col d-flex">
           <div class="card aos-init aos-animate" data-aos-delay="30" data-aos="fade-up">
-             <img class="img-fluid" src="./assets/img/wep-mopile.webp" alt="Services">
+             <img class="img-fluid" src="./assets/img/wep-mopile.png" alt="Services">
              <div class="card-body">
                <h3 class="card-title">       تصميم تطبيقات الجوال </h3>
                <p class="card-text">  
