--- a/about.html
+++ b/about.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="">
-    <meta name="description" content="">
+    <meta name="keywords" content="من نحن - شركة رايتو | حلول برمجية وأنظمة برمجية مبتكرة">
+    <meta name="description" content="نحن شركة رايتو المتخصصة في تقديم حلول برمجية وأنظمة برمجية مبتكرة لتلبية احتياجات عملك. نقدم تصميم وتطوير برامج مخصصة، وتنفيذ أنظمة متكاملة، وحلول تحسين الأداء.">
     <meta name="author" content="hadeer hussein">
-    <meta property="og:title" content=""/>
+    <meta property="og:title" content="من نحن - شركة رايتو | حلول برمجية وأنظمة برمجية مبتكرة"/>
     <meta property="og:type" content="Website"/>
     <meta property="og:url" content="" />
     <meta property="og:image" content="assets/img/LOGO.png"/>
@@ -62,12 +62,12 @@
                   البرامج
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="Programs.html"> برنامج المحاسبة</a></li>
-                  <li><a class="dropdown-item" href="Programs.html">  برنامج ادارة المخازن </a></li>
-                  <li><a class="dropdown-item" href="Programs.html">  برنامج ادارة المناديب  </a></li>
-                  <li><a class="dropdown-item" href="Programs.html">  برنامج ادارة الموارد البشرية  </a></li>
-                  <li><a class="dropdown-item" href="Programs.html">  برنامج   نقاط البيعpos  </a></li>
-                  <li><a class="dropdown-item" href="Programs.html">     برامج اخرى  </a></li>
+                  <li><a class="dropdown-item" href="#"> برنامج المحاسبة</a></li>
+                  <li><a class="dropdown-item" href="#">  برنامج ادارة المخازن </a></li>
+                  <li><a class="dropdown-item" href="#">  برنامج ادارة المناديب  </a></li>
+                  <li><a class="dropdown-item" href="#">  برنامج ادارة الموارد البشرية  </a></li>
+                  <li><a class="dropdown-item" href="#">  برنامج   نقاط البيعpos  </a></li>
+                  <li><a class="dropdown-item" href="#">     برامج اخرى  </a></li>
 
                 </ul>
               </li>
