--- a/contact.html
+++ b/contact.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="">
-    <meta name="description" content="">
+    <meta name="keywords" content="تواصل معنا واستفد من حلول برمجية وأنظمة برمجية مخصص">
+    <meta name="description" content="اتصل بفريق رايتو للحصول على الدعم المتعلق بحلول برمجية وأنظمة برمجية، نحن نقدم خدمة العملاء الممتازة والاستشارات المخصصة لمساعدتك في تحقيق أهدافك التقنية.
+    ">
     <meta name="author" content="hadeer hussein">
-    <meta property="og:title" content=""/>
+    <meta property="og:title" content="تواصل معنا | شركة رايتو لحلول برمجية وأنظمة برمجية
+    "/>
     <meta property="og:type" content="Website"/>
     <meta property="og:url" content="" />
     <meta property="og:image" content="assets/img/LOGO.png"/>
@@ -62,12 +64,12 @@
                   البرامج
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="Programs.html"> برنامج المحاسبة</a></li>
-                  <li><a class="dropdown-item" href="Programs.html">  برنامج ادارة المخازن </a></li>
-                  <li><a class="dropdown-item" href="Programs.html">  برنامج ادارة المناديب  </a></li>
-                  <li><a class="dropdown-item" href="Programs.html">  برنامج ادارة الموارد البشرية  </a></li>
-                  <li><a class="dropdown-item" href="Programs.html">  برنامج   نقاط البيعpos  </a></li>
-                  <li><a class="dropdown-item" href="Programs.html">     برامج اخرى  </a></li>
+                  <li><a class="dropdown-item" href="#"> برنامج المحاسبة</a></li>
+                  <li><a class="dropdown-item" href="#">  برنامج ادارة المخازن </a></li>
+                  <li><a class="dropdown-item" href="#">  برنامج ادارة المناديب  </a></li>
+                  <li><a class="dropdown-item" href="#">  برنامج ادارة الموارد البشرية  </a></li>
+                  <li><a class="dropdown-item" href="#">  برنامج   نقاط البيعpos  </a></li>
+                  <li><a class="dropdown-item" href="#">     برامج اخرى  </a></li>
 
                 </ul>
               </li>
