--- a/blog-defintion.html
+++ b/blog-defintion.html
@@ -62,12 +62,12 @@
                   البرامج
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="Programs.html"> برنامج المحاسبة</a></li>
-                  <li><a class="dropdown-item" href="Programs.html">  برنامج ادارة المخازن </a></li>
-                  <li><a class="dropdown-item" href="Programs.html">  برنامج ادارة المناديب  </a></li>
-                  <li><a class="dropdown-item" href="Programs.html">  برنامج ادارة الموارد البشرية  </a></li>
-                  <li><a class="dropdown-item" href="Programs.html">  برنامج   نقاط البيعpos  </a></li>
-                  <li><a class="dropdown-item" href="Programs.html">     برامج اخرى  </a></li>
+                  <li><a class="dropdown-item" href="#"> برنامج المحاسبة</a></li>
+                  <li><a class="dropdown-item" href="#">  برنامج ادارة المخازن </a></li>
+                  <li><a class="dropdown-item" href="#">  برنامج ادارة المناديب  </a></li>
+                  <li><a class="dropdown-item" href="#">  برنامج ادارة الموارد البشرية  </a></li>
+                  <li><a class="dropdown-item" href="#">  برنامج   نقاط البيعpos  </a></li>
+                  <li><a class="dropdown-item" href="#">     برامج اخرى  </a></li>
 
                 </ul>
               </li>
