--- a/Programs.html
+++ b/Programs.html
@@ -223,8 +223,14 @@
             </p>
             <div class="mt-4">
              <ul>
-              <li class="mb-1 p-decerption">تقارير مالية</li>
-              <li class="mb-1 p-decerption"> عروض الأسعار</li>
+              <li class="mb-1 p-decerption">
+                <img class="img-repet" src="./assets/img/image-p.png" alt="ripet">
+                تقارير مالية
+              </li>
+              <li class="mb-1 p-decerption"> 
+                <img class="img-repet" src="./assets/img/image-perg.png" alt="ripet">
+
+                عروض الأسعار</li>
               <li class="mb-1 p-decerption"> إدارة الأصول</li>
               <li class="mb-1 p-decerption"> إعداد الفواتير</li>
               <li class="mb-1 p-decerption">إدارة الإيرادات</li>
